fix: DTO가 도메인 VO를 가지지 않도록 수정