@@ -2,9 +2,7 @@ package kitchenpos.api.ordertable.ui.dto;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonUnwrapped;
 import java.util.List;
-import java.util.stream.Collectors;
 import kitchenpos.core.ordertable.application.dto.OrderTableRecord;
 import kitchenpos.core.ordertable.domain.NumberOfGuests;
 
@@ -13,8 +11,7 @@ public class OrderTableResponse {
     private final Long id;
     @JsonProperty
     private final Long tableGroupId;
-    @JsonUnwrapped
-    private final NumberOfGuests numberOfGuests;
+    private final int numberOfGuests;
     @JsonProperty
     private final boolean empty;
 
@@ -22,7 +19,7 @@ public class OrderTableResponse {
     public OrderTableResponse(final Long id, final Long tableGroupId, final NumberOfGuests numberOfGuests, final boolean empty) {
         this.id = id;
         this.tableGroupId = tableGroupId;
-        this.numberOfGuests = numberOfGuests;
+        this.numberOfGuests = numberOfGuests.getNumberOfGuests();
         this.empty = empty;
     }
 
@@ -38,6 +35,6 @@ public class OrderTableResponse {
     public static List<OrderTableResponse> from(final List<OrderTableRecord> tableRecords) {
         return tableRecords
                 .stream().map(OrderTableResponse::from)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
